[gd_scene load_steps=93 format=3 uid="uid://bc2jtreq5e56n"]

[ext_resource type="Script" uid="uid://8jw71fnp2q5i" path="res://Shop/UpgradeCards/upgrade_card.gd" id="1_1v4fj"]
[ext_resource type="Texture2D" uid="uid://xxtsio3wfcfu" path="res://Shop/UpgradeCards/DefaultUpgrade1.svg" id="2_gtu6c"]
[ext_resource type="Texture2D" uid="uid://c8iqe3gph5jgy" path="res://Shop/UpgradeCards/FruitMagnet1.svg" id="3_ox4k6"]
[ext_resource type="Texture2D" uid="uid://dw31wps5onlrq" path="res://Shop/UpgradeCards/DefaultUpgrade2.svg" id="3_xk1pt"]
[ext_resource type="Texture2D" uid="uid://c6vsnqoh5wdpi" path="res://Shop/UpgradeCards/DefaultUpgrade3.svg" id="4_r5us8"]
[ext_resource type="Texture2D" uid="uid://dr1t4qj2rgeiv" path="res://Shop/UpgradeCards/FruitMagnet2.svg" id="4_wcnut"]
[ext_resource type="Texture2D" uid="uid://m3kk1umhsx" path="res://Shop/UpgradeCards/FruitMagnet3.svg" id="5_gtu6c"]
[ext_resource type="Texture2D" uid="uid://b81d7l7fr7t7j" path="res://Shop/UpgradeCards/Hyperspeed1.svg" id="6_xk1pt"]
[ext_resource type="Texture2D" uid="uid://vjv74823v8d1" path="res://Shop/UpgradeCards/Hyperspeed2.svg" id="7_r5us8"]
[ext_resource type="Texture2D" uid="uid://dmgh7qavf76y1" path="res://Shop/UpgradeCards/Hyperspeed3.svg" id="8_yyp1t"]
[ext_resource type="Texture2D" uid="uid://cftky2pry7ogo" path="res://Shop/UpgradeCards/DoubleFruit1.svg" id="9_fwh1f"]
[ext_resource type="Texture2D" uid="uid://cgxj21tbclcbn" path="res://Shop/UpgradeCards/DoubleFruit2.svg" id="10_sbsg3"]
[ext_resource type="Texture2D" uid="uid://bkhhuacu7xp8d" path="res://Shop/UpgradeCards/DoubleFruit3.svg" id="11_7lrqi"]
[ext_resource type="Texture2D" uid="uid://blxbmaeywgv0t" path="res://Shop/UpgradeCards/EdgeWrap.svg" id="12_qgweo"]
[ext_resource type="Texture2D" uid="uid://cefv5gxytj2f1" path="res://Shop/UpgradeCards/FruitRelocator1.svg" id="14_a28kx"]
[ext_resource type="Texture2D" uid="uid://b424xg4rk0q1" path="res://Shop/UpgradeCards/FruitRelocator2.svg" id="15_0pjoy"]
[ext_resource type="Texture2D" uid="uid://djcvfpnq64tac" path="res://Shop/UpgradeCards/FruitRelocator3.svg" id="16_ibh7n"]
[ext_resource type="Texture2D" uid="uid://dfd1wa1lmrpfu" path="res://Shop/UpgradeCards/CrossRoad1.svg" id="17_h2lpd"]
[ext_resource type="Texture2D" uid="uid://dl004d0kqy5ap" path="res://Shop/UpgradeCards/CrossRoad2.svg" id="18_b1hmr"]
[ext_resource type="Texture2D" uid="uid://dvkpes85sokfm" path="res://Shop/UpgradeCards/CrossRoad3.svg" id="19_evqrt"]
[ext_resource type="Texture2D" uid="uid://cgql3uve8cfr5" path="res://Shop/UpgradeCards/TailCut.svg" id="20_f1qts"]
[ext_resource type="Texture2D" uid="uid://c0402cd6i7ho0" path="res://Shop/UpgradeCards/KnotSlowmo.svg" id="21_rpqwx"]
[ext_resource type="Texture2D" uid="uid://cbyk1wowmea3l" path="res://Shop/UpgradeCards/ItemReload.svg" id="22_dse7d"]
[ext_resource type="Texture2D" uid="uid://bjyb46sxmqy5t" path="res://Shop/UpgradeCards/Immutable.svg" id="23_pxvxx"]
[ext_resource type="Texture2D" uid="uid://wjgjxbelk76i" path="res://icon.svg" id="26_r5us8"]
[ext_resource type="Texture2D" uid="uid://7a4e3l6e3ots" path="res://Shop/UpgradeCards/TimeStop1.svg" id="26_sbsg3"]
[ext_resource type="Texture2D" uid="uid://dqcdhkgpyjnv" path="res://Shop/UpgradeCards/TimeStop2.svg" id="27_7lrqi"]
[ext_resource type="Texture2D" uid="uid://dcit68wswd7o1" path="res://Levels/Map1/test_level.svg" id="27_yyp1t"]
[ext_resource type="Texture2D" uid="uid://bcwlstabxqky0" path="res://Shop/UpgradeCards/TimeStop3.svg" id="28_qgweo"]
[ext_resource type="Texture2D" uid="uid://1lq4k2l8vt1a" path="res://Shop/UpgradeCards/Wormhole1.svg" id="29_7lrqi"]
[ext_resource type="Texture2D" uid="uid://dy88np1cv7pp3" path="res://Shop/UpgradeCards/Wormhole2.svg" id="30_t1l65"]
[ext_resource type="Texture2D" uid="uid://7gdhiwpj3vxx" path="res://Shop/UpgradeCards/Wormhole3.svg" id="31_a28kx"]
[ext_resource type="Texture2D" uid="uid://vej6lcwmhcmh" path="res://Shop/UpgradeCards/CornerPhasing.png" id="32_a28kx"]
[ext_resource type="Texture2D" uid="uid://m6yrh3g0km4g" path="res://Shop/UpgradeCards/Moulting.svg" id="33_0pjoy"]
[ext_resource type="Texture2D" uid="uid://bpvwpmgpogfo2" path="res://Shop/UpgradeCards/Anchor.svg" id="34_ibh7n"]
[ext_resource type="Texture2D" uid="uid://dkl1bses52k5x" path="res://Shop/UpgradeCards/PiggyBank.svg" id="35_h2lpd"]
[ext_resource type="Texture2D" uid="uid://ljehyg5av4dj" path="res://Shop/UpgradeCards/sale.svg" id="36_b1hmr"]
[ext_resource type="Texture2D" uid="uid://crur3bln6mti" path="res://Shop/UpgradeCards/Diet1.svg" id="37_pxvxx"]
[ext_resource type="Texture2D" uid="uid://csfnnf6f08xmx" path="res://Shop/UpgradeCards/Diet2.svg" id="38_t6avq"]
[ext_resource type="Texture2D" uid="uid://ds5y6q4r6a38j" path="res://Shop/UpgradeCards/SaleSign.svg" id="39_evqrt"]
[ext_resource type="Texture2D" uid="uid://q200oh72yttn" path="res://Shop/UpgradeCards/Diet3.svg" id="39_nsm8n"]
[ext_resource type="FontFile" uid="uid://q0cdino8xm1j" path="res://Fonts/BRLNSR.TTF" id="40_f1qts"]
[ext_resource type="Texture2D" uid="uid://ddtg5b7bfse3r" path="res://Shop/UpgradeCards/HolyMantle.svg" id="40_t6avq"]
[ext_resource type="Texture2D" uid="uid://dsis8fdf4ptt1" path="res://Shop/UpgradeCards/SteelHelmet.svg" id="41_nsm8n"]
[ext_resource type="Texture2D" uid="uid://dllsevn4oih4k" path="res://Shop/UpgradeCards/Fuel1.svg" id="42_u8qu0"]
[ext_resource type="Texture2D" uid="uid://dye5rnhdb3doj" path="res://Shop/UpgradeCards/Fuel2.svg" id="43_iqm1b"]
[ext_resource type="Texture2D" uid="uid://bg6bbxyxo2e50" path="res://Shop/UpgradeCards/Fuel3.svg" id="44_lmueq"]
[ext_resource type="Texture2D" uid="uid://bbpwacdc1jvg4" path="res://Shop/UpgradeCards/RubberBand.svg" id="45_iqm1b"]
[ext_resource type="Texture2D" uid="uid://cy8t72e7rllnq" path="res://Shop/UpgradeCards/SwissKnive.svg" id="46_lmueq"]
[ext_resource type="Texture2D" uid="uid://b4r50mmtygrm6" path="res://Shop/UpgradeCards/MagicFlute1.svg" id="47_busg3"]
[ext_resource type="Texture2D" uid="uid://bnuc20d3gxn6" path="res://Shop/UpgradeCards/MagicFlute2.svg" id="48_ckyt6"]
[ext_resource type="Texture2D" uid="uid://x8ric46mpha" path="res://Shop/UpgradeCards/MagicFlute3.svg" id="49_kn4tv"]
[ext_resource type="Texture2D" uid="uid://4ltbpcy0alb1" path="res://Shop/UpgradeCards/Pacman1.svg" id="50_k2duo"]
[ext_resource type="AudioStream" uid="uid://c8dmgwp22cyce" path="res://Shop/Sfx/CardSnap.wav" id="51_dqar4"]
[ext_resource type="Texture2D" uid="uid://dmnx0w0qohpcc" path="res://Shop/UpgradeCards/Pacman2.svg" id="51_uygd3"]
[ext_resource type="AudioStream" uid="uid://bswqsb1vkijts" path="res://Shop/Sfx/CardSelect.wav" id="52_ea03u"]
[ext_resource type="Texture2D" uid="uid://dmj45rd0wwcci" path="res://Shop/UpgradeCards/Pacman3.svg" id="52_n5epb"]
[ext_resource type="AudioStream" uid="uid://b8j31t0jdbxn4" path="res://Shop/Sfx/CardDeselesct.wav" id="53_1kqk4"]
[ext_resource type="Texture2D" uid="uid://coithq670q5jl" path="res://Shop/UpgradeCards/Headlight.svg" id="53_t3o3l"]
[ext_resource type="Texture2D" uid="uid://kdourpai0vr6" path="res://Shop/UpgradeCards/PlantSnake.svg" id="53_uygd3"]
[ext_resource type="AudioStream" uid="uid://dejdw5oc0tjyw" path="res://Shop/Sfx/CardBuy.wav" id="54_5fd0j"]
[ext_resource type="Texture2D" uid="uid://j0vpfnfrjytu" path="res://Shop/UpgradeCards/Dance.svg" id="54_bim42"]
[ext_resource type="Texture2D" uid="uid://br2gk6nyd7rj3" path="res://Shop/UpgradeCards/ShinyGhost.svg" id="54_n5epb"]
[ext_resource type="Texture2D" uid="uid://dcsowd5gt4548" path="res://MainMenu/BannerIcons/HalfGone.svg" id="55_bim42"]
[ext_resource type="Texture2D" uid="uid://kgjubm5sp1oq" path="res://Shop/UpgradeCards/Allergy.svg" id="56_a0kyf"]
[ext_resource type="Texture2D" uid="uid://butf0pgwx2hoi" path="res://Shop/UpgradeCards/snek1.svg" id="57_dxsnv"]
[ext_resource type="Texture2D" uid="uid://d0xrqur6rlske" path="res://Shop/UpgradeCards/snek2.svg" id="58_530hf"]
[ext_resource type="Texture2D" uid="uid://oq7v5t026pfc" path="res://Shop/UpgradeCards/snek3.svg" id="59_abc6x"]
[ext_resource type="Texture2D" uid="uid://uldq0vvhi3m4" path="res://Shop/UpgradeCards/PowerNap.svg" id="60_530hf"]
[ext_resource type="Texture2D" uid="uid://cvskf4rlgc7j8" path="res://Shop/UpgradeCards/Catch.svg" id="61_abc6x"]
[ext_resource type="Texture2D" uid="uid://b3vebv7edijgw" path="res://Shop/UpgradeCards/Diffusion.svg" id="62_bxwdc"]
[ext_resource type="Texture2D" uid="uid://ddnhqor5cbp46" path="res://Shop/UpgradeCards/BigFruit1.svg" id="63_eptdx"]
[ext_resource type="Texture2D" uid="uid://dbho8mu5wkvcc" path="res://Shop/UpgradeCards/BigFruit2.svg" id="64_byfrd"]
[ext_resource type="Texture2D" uid="uid://djyyc6n5fs54x" path="res://Shop/UpgradeCards/BigFruit3.svg" id="65_8iwqp"]
[ext_resource type="Texture2D" uid="uid://bun6ita5yskpg" path="res://Shop/UpgradeCards/Overfed.svg" id="66_8iwqp"]
[ext_resource type="Texture2D" uid="uid://c1iigpdcuvvpt" path="res://Shop/UpgradeCards/DeadMouse.svg" id="67_jvq0k"]
[ext_resource type="Texture2D" uid="uid://cg78hnyp1dgw2" path="res://Shop/UpgradeCards/Dragonfly1.svg" id="69_7durd"]
[ext_resource type="Texture2D" uid="uid://ctfl7wdasathq" path="res://Shop/UpgradeCards/PlayButton.svg" id="70_jvq0k"]
[ext_resource type="Texture2D" uid="uid://mhhcyww3lkhl" path="res://Shop/UpgradeCards/Dragonfly2.svg" id="70_v0dc1"]
[ext_resource type="Texture2D" uid="uid://dnsgwx0i5xsg1" path="res://Shop/UpgradeCards/Dragonfly3.svg" id="71_n1h1x"]
[ext_resource type="Texture2D" uid="uid://bj8jly132vvdx" path="res://Shop/UpgradeCards/MayFly1.svg" id="72_krigg"]
[ext_resource type="Texture2D" uid="uid://cc6pp6l1cq1b5" path="res://Shop/UpgradeCards/MayFly2.svg" id="73_lwmcy"]
[ext_resource type="Texture2D" uid="uid://eidduh23qdl3" path="res://Shop/UpgradeCards/MayFly3.svg" id="74_3imu4"]
[ext_resource type="Texture2D" uid="uid://dn5y33gdbxwnb" path="res://Shop/UpgradeCards/Bumblebee1.svg" id="75_ierhw"]
[ext_resource type="Texture2D" uid="uid://bccc0pr8nyh4l" path="res://Shop/UpgradeCards/Bumblebee2.svg" id="76_ckwj3"]
[ext_resource type="Texture2D" uid="uid://c33hae8n5rdn7" path="res://Shop/UpgradeCards/Bumblebee3.svg" id="77_5ppmn"]
[ext_resource type="Texture2D" uid="uid://h474owdl8qpe" path="res://Shop/UpgradeCards/Tongue1.svg" id="78_02voi"]
[ext_resource type="Texture2D" uid="uid://bd0ypbxtcw5y7" path="res://Shop/UpgradeCards/Tongue2.svg" id="79_4ngss"]
[ext_resource type="Texture2D" uid="uid://7bghp4cn5h4e" path="res://Shop/UpgradeCards/Tongue3.svg" id="80_wsase"]

[sub_resource type="SpriteFrames" id="SpriteFrames_222e7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gtu6c")
}, {
"duration": 1.0,
"texture": ExtResource("3_xk1pt")
}, {
"duration": 1.0,
"texture": ExtResource("4_r5us8")
}, {
"duration": 1.0,
"texture": ExtResource("3_ox4k6")
}, {
"duration": 1.0,
"texture": ExtResource("4_wcnut")
}, {
"duration": 1.0,
"texture": ExtResource("5_gtu6c")
}, {
"duration": 1.0,
"texture": ExtResource("6_xk1pt")
}, {
"duration": 1.0,
"texture": ExtResource("7_r5us8")
}, {
"duration": 1.0,
"texture": ExtResource("8_yyp1t")
}, {
"duration": 1.0,
"texture": ExtResource("9_fwh1f")
}, {
"duration": 1.0,
"texture": ExtResource("10_sbsg3")
}, {
"duration": 1.0,
"texture": ExtResource("11_7lrqi")
}, {
"duration": 1.0,
"texture": ExtResource("12_qgweo")
}, {
"duration": 1.0,
"texture": ExtResource("14_a28kx")
}, {
"duration": 1.0,
"texture": ExtResource("15_0pjoy")
}, {
"duration": 1.0,
"texture": ExtResource("16_ibh7n")
}, {
"duration": 1.0,
"texture": ExtResource("17_h2lpd")
}, {
"duration": 1.0,
"texture": ExtResource("18_b1hmr")
}, {
"duration": 1.0,
"texture": ExtResource("19_evqrt")
}, {
"duration": 1.0,
"texture": ExtResource("20_f1qts")
}, {
"duration": 1.0,
"texture": ExtResource("21_rpqwx")
}, {
"duration": 1.0,
"texture": ExtResource("22_dse7d")
}, {
"duration": 1.0,
"texture": ExtResource("23_pxvxx")
}, {
"duration": 1.0,
"texture": ExtResource("26_sbsg3")
}, {
"duration": 1.0,
"texture": ExtResource("27_7lrqi")
}, {
"duration": 1.0,
"texture": ExtResource("28_qgweo")
}, {
"duration": 1.0,
"texture": ExtResource("29_7lrqi")
}, {
"duration": 1.0,
"texture": ExtResource("30_t1l65")
}, {
"duration": 1.0,
"texture": ExtResource("31_a28kx")
}, {
"duration": 1.0,
"texture": ExtResource("32_a28kx")
}, {
"duration": 1.0,
"texture": ExtResource("33_0pjoy")
}, {
"duration": 1.0,
"texture": ExtResource("34_ibh7n")
}, {
"duration": 1.0,
"texture": ExtResource("35_h2lpd")
}, {
"duration": 1.0,
"texture": ExtResource("36_b1hmr")
}, {
"duration": 1.0,
"texture": ExtResource("37_pxvxx")
}, {
"duration": 1.0,
"texture": ExtResource("38_t6avq")
}, {
"duration": 1.0,
"texture": ExtResource("39_nsm8n")
}, {
"duration": 1.0,
"texture": ExtResource("40_t6avq")
}, {
"duration": 1.0,
"texture": ExtResource("41_nsm8n")
}, {
"duration": 1.0,
"texture": ExtResource("42_u8qu0")
}, {
"duration": 1.0,
"texture": ExtResource("43_iqm1b")
}, {
"duration": 1.0,
"texture": ExtResource("44_lmueq")
}, {
"duration": 1.0,
"texture": ExtResource("45_iqm1b")
}, {
"duration": 1.0,
"texture": ExtResource("46_lmueq")
}, {
"duration": 1.0,
"texture": ExtResource("47_busg3")
}, {
"duration": 1.0,
"texture": ExtResource("48_ckyt6")
}, {
"duration": 1.0,
"texture": ExtResource("49_kn4tv")
}, {
"duration": 1.0,
"texture": ExtResource("50_k2duo")
}, {
"duration": 1.0,
"texture": ExtResource("51_uygd3")
}, {
"duration": 1.0,
"texture": ExtResource("52_n5epb")
}, {
"duration": 1.0,
"texture": ExtResource("53_uygd3")
}, {
"duration": 1.0,
"texture": ExtResource("53_t3o3l")
}, {
"duration": 1.0,
"texture": ExtResource("54_n5epb")
}, {
"duration": 1.0,
"texture": ExtResource("54_bim42")
}, {
"duration": 1.0,
"texture": ExtResource("55_bim42")
}, {
"duration": 1.0,
"texture": ExtResource("56_a0kyf")
}, {
"duration": 1.0,
"texture": ExtResource("57_dxsnv")
}, {
"duration": 1.0,
"texture": ExtResource("58_530hf")
}, {
"duration": 1.0,
"texture": ExtResource("59_abc6x")
}, {
"duration": 1.0,
"texture": ExtResource("60_530hf")
}, {
"duration": 1.0,
"texture": ExtResource("61_abc6x")
}, {
"duration": 1.0,
"texture": ExtResource("62_bxwdc")
}, {
"duration": 1.0,
"texture": ExtResource("63_eptdx")
}, {
"duration": 1.0,
"texture": ExtResource("64_byfrd")
}, {
"duration": 1.0,
"texture": ExtResource("65_8iwqp")
}, {
"duration": 1.0,
"texture": ExtResource("66_8iwqp")
}, {
"duration": 1.0,
"texture": ExtResource("67_jvq0k")
}, {
"duration": 1.0,
"texture": ExtResource("69_7durd")
}, {
"duration": 1.0,
"texture": ExtResource("70_v0dc1")
}, {
"duration": 1.0,
"texture": ExtResource("71_n1h1x")
}, {
"duration": 1.0,
"texture": ExtResource("72_krigg")
}, {
"duration": 1.0,
"texture": ExtResource("73_lwmcy")
}, {
"duration": 1.0,
"texture": ExtResource("74_3imu4")
}, {
"duration": 1.0,
"texture": ExtResource("75_ierhw")
}, {
"duration": 1.0,
"texture": ExtResource("76_ckwj3")
}, {
"duration": 1.0,
"texture": ExtResource("77_5ppmn")
}, {
"duration": 1.0,
"texture": ExtResource("78_02voi")
}, {
"duration": 1.0,
"texture": ExtResource("79_4ngss")
}, {
"duration": 1.0,
"texture": ExtResource("80_wsase")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_r5us8")
}, {
"duration": 1.0,
"texture": ExtResource("27_yyp1t")
}, {
"duration": 1.0,
"texture": ExtResource("26_r5us8")
}],
"loop": false,
"name": &"destroyed_anim",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("70_jvq0k")
}],
"loop": false,
"name": &"play_button_anim",
"speed": 5.0
}]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1v4fj"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1v4fj"]
size = Vector2(160, 160)

[node name="UpgradeCard" type="Control" groups=["UpgradeCard"]]
z_index = 5
z_as_relative = false
custom_minimum_size = Vector2(120, 120)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 190.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_1v4fj")

[node name="CardSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(100, 100)
sprite_frames = SubResource("SpriteFrames_222e7")
frame = 4
frame_progress = 0.424902

[node name="CardShadow" type="Sprite2D" parent="CardSprite"]
modulate = Color(0, 0, 0, 0.635294)
show_behind_parent = true
texture = SubResource("CompressedTexture2D_1v4fj")

[node name="SaleTag" type="Sprite2D" parent="CardSprite"]
visible = false
z_index = 1
position = Vector2(20, 100)
texture = ExtResource("39_evqrt")

[node name="SaleNumber" type="Label" parent="CardSprite/SaleTag"]
offset_left = -33.0
offset_top = -54.0
offset_right = 35.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0.66, 0.198, 0.3289, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("40_f1qts")
theme_override_font_sizes/font_size = 51
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardArea" type="Area2D" parent="."]
position = Vector2(40, 40)
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardArea"]
position = Vector2(60, 60)
shape = SubResource("RectangleShape2D_1v4fj")

[node name="CardSnapAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("51_dqar4")

[node name="CardSelectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("52_ea03u")

[node name="CardDeselectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("53_1kqk4")

[node name="CardBuyAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("54_5fd0j")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
